Archive2/d3/8c4036534eb48b/output
main.cpp: In function 'int main()':
main.cpp:4:16: error: unable to find string literal operator 'operator"" _s'
   std::cout << u"abcd"_s + 'c' << std::endl;
                ^
